--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">csory</string>
-
+    <string name="answer_true">정답!</string>
+    <string name="answer_false">오답!</string>
 </resources>
